<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerInside"
        android:src="@drawable/finding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weatherIcon"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingBottom="25dp"
            >

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textColor="@color/textPrimary"
                android:textSize="100sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weatherCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="@color/textPrimary"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/humid"
                android:textColor="@color/textPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/latitudeLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/latLon"
            android:textColor="@color/textSecondary"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textColor="@color/textSecondary"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/systemTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/textSecondary"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>